--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,9 @@ author = Tomoya Horiuchi
 author_email = thoriuchi0531@gmail.com
 license = MIT
 classifiers = 
-    Development Status :: 3 - Alpha,
-    License :: OSI Approved :: MIT License,
-    Programming Language :: Python :: 3.6,
+    Development Status :: 3 - Alpha
+    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: 3.6
     Topic :: Office/Business :: Financial :: Investment
 project_urls =
     Documentation = https://fipie.readthedocs.io/en/latest/
