--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Install python dependencies
         run: |
-          pip install -r requirements.txt
-          pip install pytest coverage
+          pip install ".[dev]"
 
       - name: Generate report
         run:
