--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,8 +22,7 @@ jobs:
 
       - name: Install python dependencies
         run: |
-          pip install -r requirements.txt
-          pip install pytest
+          pip install ".[dev]"
 
       - name: Display installed libraries
         run: pip list
