--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,7 +24,6 @@ sphinx:
 #    - pdf
 
 # Optionally declare the Python requirements required to build your docs
-#python:
-#   install:
-#   - requirements: docs/requirements.txt
-#   - requirements: requirements.txt
+python:
+   install:
+     - path: ".[dev]"
