--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,8 @@ project_urls =
     Source = https://github.com/thoriuchi0531/fipie
 
 [options]
+packages = find:
+include_package_data = true
 python_requires = >=3.6
 install_requires =
     pandas>=0.25
